v6.3.3 integracion IA